force-app/main/default/objects/Product_Relation__c/Product_Relation__c.object-meta.xml
<CustomObject>
    <label>产品关系</label>
    <nameField>
        <displayFormat>PRN-{00000}</displayFormat>
        <label>Product Relation No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>