force-app/main/default/objects/Product_Relation__c/fields/Customer_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Model</label>
    <referenceTo>Customer_Model_Product__c</referenceTo>
    <relationshipLabel>Product Relation</relationshipLabel>
    <relationshipName>Product_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>