force-app/main/default/objects/Product_Relation__c/fields/Factory_Model__c.field-meta.xml
<CustomField>
    <fullName>Factory_Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Relation</relationshipLabel>
    <relationshipName>Product_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>