force-app/main/default/objects/Product_Relation__c/fields/GSS_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>GSS_Country_Name__c</fullName>
    <label>GSS Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>