force-app/main/default/objects/Product_Relation__c/fields/GSS_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>GSS_Sales_Region__c</fullName>
    <label>GSS Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>美洲直发</fullName>
            </value>
            <value>
                <fullName>美国分公司</fullName>
            </value>
            <value>
                <fullName>中东非洲直发</fullName>
            </value>
            <value>
                <fullName>欧洲直发</fullName>
            </value>
            <value>
                <fullName>南非分公司</fullName>
            </value>
            <value>
                <fullName>电视大客户部</fullName>
            </value>
            <value>
                <fullName>亚太直发</fullName>
            </value>
            <value>
                <fullName>大客户-LOEWE</fullName>
            </value>
            <value>
                <fullName>冰冷洗大客户一区</fullName>
            </value>
            <value>
                <fullName>市场部</fullName>
            </value>
            <value>
                <fullName>澳大利亚分公司</fullName>
            </value>
            <value>
                <fullName>迪拜分公司</fullName>
            </value>
            <value>
                <fullName>英国公司</fullName>
            </value>
            <value>
                <fullName>加拿大公司</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>