force-app/main/default/objects/Product_Relation__c/fields/Product_Export_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Export_Model__c</fullName>
    <label>Product Factory Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>