force-app/main/default/objects/Product_Relation__c/listViews/FC_19DD4SFB_BPN_001.listView-meta.xml
<ListView>
    <fullName>FC_19DD4SFB_BPN_001</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Product_Export_Model__c</field>
        <operation>equals</operation>
        <value>WFKM9014-KUW001</value>
    </filters>
    <label>FC-19DD4SFB/BPN-001</label>
</ListView>