force-app/main/default/objects/Product_Relation__c/listViews/WFKM9014_KUW001.listView-meta.xml
<ListView>
    <fullName>WFKM9014_KUW001</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Factory_Model__c</field>
        <operation>equals</operation>
        <value>a100p0000008xwJAAQ</value>
    </filters>
    <label>WFKM9014-KUW001</label>
</ListView>